427870  lmw, lswi and related PowerPC insns aren't allowed on ppc64le
427787  Support new faccessat2 linux syscall (439)
428035  drd: Unbreak the musl build
428648  s390_emit_load_mem panics due to 20-bit offset for vector load
428716  cppcheck detects potential leak in VEX/useful/smchash.c
428909  helgrind: need to intercept duplicate libc definitions for Fedora 33
429692  unhandled ppc64le-linux syscall: 147 (getsid)
429864  s390x: C++ atomic test_and_set yields false-positive memcheck
        diagnostics
429952  Errors when building regtest with clang
430354  ppc stxsibx and stxsihx instructions write too much data
430485  expr_is_guardable doesn't handle Iex_Qop
431556  Complete arm64 FADDP v8.2 instruction support
432102  Add support for DWARF5 as produced by GCC11
432161  Addition of arm64 v8.2 FADDP, FNEG and FSQRT
432381  drd: Process STACK_REGISTER client requests
432672  vg_regtest: test-specific environment variables not reset between tests
432809  VEX should support REX.W + POPF
432861  PPC modsw and modsd give incorrect results for 1 mod 12
432215  Add debuginfod functionality
n-i-bz  helgrind: If hg_cli__realloc fails, return NULL.
429352  PPC ISA 3.1 support is missing, part 7


Release 3.16.1 (22 June 2020)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

3.16.1 fixes two critical bugs discovered after 3.16.0 was frozen.  It also
fixes character encoding problems in the documentation HTML.

422677  PPC sync instruction L field should only be 2 bits in ISA 3.0
422715  32-bit x86: vex: the `impossible' happened: expr_is_guardable: unhandled expr

(3.16.1, 22 June 2020, 36d6727e1d768333a536f274491e5879cab2c2f7)



Release 3.16.0 (27 May 2020)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

3.16.0 is a feature release with many improvements and the usual collection of
bug fixes.

This release supports X86/Linux, AMD64/Linux, ARM32/Linux, ARM64/Linux,
PPC32/Linux, PPC64BE/Linux, PPC64LE/Linux, S390X/Linux, MIPS32/Linux,
MIPS64/Linux, ARM/Android, ARM64/Android, MIPS32/Android, X86/Android,